# ses-emailer

./: .gitignore  LICENSE  README.md  Task.md  cli.py  index.html  main.py  pyproject.toml  requirements.txt  skills-lock.json  start.py  start_app.py  test-scout.js
.github/workflows/: nextjs.yml  static.yml
api/: __init__.py  auth.py  config_manager.py  main.py
api/routers/: config.py  db.py  drafts.py  email.py  history.py  templates.py
assets/: index-D0YSz1Tv.js  index-rE1bRGMV.css
config/: __init__.py  profiles.json  settings.py
landing/: package.json
landing/src/app/: layout.tsx  page.tsx
landing/src/components/ui/aceternity/: sparkles.tsx
old_tui/: app.py  styles.tcss
old_tui/components/: __init__.py  modals.py  widgets.py
old_tui/screens/: __init__.py  send.py
sending/: db.py  email_list.py  emails.py  senders.py
templates/: Newsletter.tsx  Welcome.tsx  package.json  render.js
ts-tui/: package.json  tsconfig.json
ts-tui/src/: App.tsx  api.ts  index.tsx
ts-tui/src/components/: FilePicker.tsx  FormField.tsx  KeyHint.tsx  SectionBox.tsx
ts-tui/src/contexts/: ToastContext.tsx
ts-tui/src/screens/: ComposeScreen.tsx  ConfigScreen.tsx  DraftsScreen.tsx  HistoryScreen.tsx  HomeScreen.tsx  SendScreen.tsx
tui/: __init__.py
tui-ts/: README.md  package.json  tsconfig.json
tui-ts/src/: api.ts  app.tsx  index.tsx  screens.tsx
tui/screens/: compose.py  config.py  drafts.py  history.py  home.py
website/: package.json  vite.config.ts
website/src/: App.tsx  index.css
website/src/components/: Header.tsx  Hero.tsx
