[project]
name = "ses-email"
version = "2.0.0"
description = "SES Email Sender — FastAPI backend + TypeScript TUI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "boto3>=1.42.24",
    "pandas>=2.3.3",
    "python-dotenv>=1.2.1",
    "openpyxl>=3.1.0",
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "python-multipart>=0.0.18",
    "sse-starlette>=2.0.0",
]

[project.scripts]
ses-email-api = "api.main:run_server"
